Add countryOfOrigin
